@@ -2,9 +2,12 @@ package com.minhduc.tasktracker.security;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
@@ -28,8 +31,13 @@ public class JwtFilter extends OncePerRequestFilter {
 	@Override
 	protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
 			throws ServletException, IOException {
+		
+		if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+		    filterChain.doFilter(request, response);
+		    return;
+		}
+		
 		String header = request.getHeader("Authorization");
-
 		if (header == null || !header.startsWith("Bearer ")) {
 			filterChain.doFilter(request, response);
 			return;
@@ -40,7 +48,9 @@ public class JwtFilter extends OncePerRequestFilter {
 		if (jwtService.isTokenValid(token)) {
 			String username = jwtService.extractUsername(token);
 			UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(username, null,
-					Collections.emptyList());
+					List.of(new SimpleGrantedAuthority("ROLE_USER")));
+			// 👇 QUAN TRỌNG
+			auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 			SecurityContextHolder.getContext().setAuthentication(auth);
 		}
 
